[package]
name = "t2"
version = "0.1.0"
edition = "2024"



[workspace]
resolver = "2" 



[profile.dev]
opt-level = 1


[profile.dev.package."*"]
opt-level = 3

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


[dependencies]
bevy = { version = "0.16", features = ["bevy_remote"] }
bevy-inspector-egui = "0.31.0"
bevy_aseprite_ultra = "0.6.1"
bevy_ecs_tiled = { version = "0.7.0", features = [
    "user_properties"
    ] }
bevy_ecs_tilemap = "0.16.0"
# bevy_egui = "0.34.1"
bevy_simple_subsecond_system = "0.2.0"
bevy_turborand = "0.11.0"




log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }



# watchexec -r cargo  run


# BEVY_ASSET_ROOT="." dx serve --hot-patch